Fix (Montage): Vertical alignment of monitors to top
This fixes the monitor block height issue

+ Added a border around monitor in layer editing mode.

--- a/web/skins/classic/css/base/views/montage.css
+++ b/web/skins/classic/css/base/views/montage.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-content: baseline;
 }
 #monitors:after {
   content: ".";
@@ -31,6 +32,10 @@
   padding: 0;
   border-radius: 0;
   position: relative;
+}
+
+#monitors.modeEditingMonitor .monitor {
+  border: solid red;
 }
 
 .monitorStream {
